force-app/main/default/objects/Weekly_Pay__c/Weekly_Pay__c.object-meta.xml
<CustomObject>
    <label>Weekly Hour</label>
    <nameField>
        <displayFormat>Week-{0000}</displayFormat>
        <label>Weekly Pay Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>