force-app/main/default/objects/Weekly_Pay__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Start_Date__c + 6</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>