force-app/main/default/objects/Weekly_Pay__c/fields/My_Pay__c.field-meta.xml
<CustomField>
    <fullName>My_Pay__c</fullName>
    <label>My Pay</label>
    <referenceTo>My_Pay__c</referenceTo>
    <relationshipName>Weekly_Pays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>