force-app/main/default/objects/Weekly_Pay__c/validationRules/Week_should_be_for_the_Same_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Week_should_be_for_the_Same_Year</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(CONTAINS(My_Pay__r.Name, TEXT( YEAR( Start_Date__c ))))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Year must be same as your pay year</errorMessage>
</ValidationRule>